# aeo-light

./: .gitignore  .gitmodules  CMakeLists.txt  FilmScan.cpp  FilmScan.h  README.md  aeolight.rc  images.qrc  main.cpp  mainwindow.cpp  vcpkg.json  videoencoder.cpp
cmake/: FindFFMPEG.cmake  FindOpenEXR.cmake
